--- a/savings/templates/savings/history.html
+++ b/savings/templates/savings/history.html
@@ -5,8 +5,7 @@
 <h1 class="history-h1">History</h1>
 
 <div class="history-container" >
-
-            {% for goal in completed_goals reversed %}
+            {% for goal in completed_goals %}
             <div class="history-item">
                 <div class="timestamp">
                     {{ goal.date_completed}}
@@ -18,9 +17,7 @@
                 <div class="item-detail">{{goal.cost}}</div>
             </div>
             {% endfor %}
-
 </div>
-
 
 <a href="{% url 'savings:home' %}" ><input type="button" value="Back" class="btn btn-secondary" style="margin-left: 70p !important;"></a>
 
